2016-09-02  Roberto Bertolusso  <rbertolusso@rice.edu>

        * 1.2.0 (not released to CRAN).

        * Save results of functions specified in zone 2 and
          zone 4 of intubOrder.

2016-09-02  Roberto Bertolusso  <rbertolusso@rice.edu>

        * 1.1.0 (not released to CRAN).

        * set_intuEnv() now returns invisibly.

2016-08-28  Roberto Bertolusso  <rbertolusso@rice.edu>

        * Release 1.0.0 (released to CRAN).

        * Details on github: rbertolusso/intubate

2016-07-30  Roberto Bertolusso  <rbertolusso@rice.edu>
        * Interfaces to more CRAN packages ("e1071", "gbm",
          "randomForest", "tree").

        * Functions with formula followed by data now are
          in two groups: one in which the reversal of
          parameters is necessary (and this is associated
          to the helper function ntbt_function_formula_data),
          and another in which it is not.

        * Added vignette.

        * C stack error on definition #1 (barryrowlingson)
          Fixed potential bug if user creates an interface
          function non starting with ntbt_.

        * Feature request: support for lfe::felm #3 (kendonB)
          Interface to "felm" in "lfe"is there now.

        * ntbt_function_* functions fail if you use :: #5 (richierocks)
          Fixed.

2016-07-29  Roberto Bertolusso  <rbertolusso@rice.edu>

        * 0.99.2 (released to CRAN)

        * Interfaces to recommended R packages ("lattice", "nlme",
          "nnet", "rpart", "survival") and CRAN packages
          ("gam", "leaps", "pls") useful for data science.

2016-07-26  Roberto Bertolusso  <rbertolusso@rice.edu>

        * 0.99.1 (released to CRAN)

        * Initial version. Interfaces to "stats", "graphics", and "MASS".