@@ -1,8 +1,8 @@
 Package: intubate
 Type: Package
 Title: Interface to Popular R Functions for Data Science Pipelines
-Version: 1.2.0
-Date: 2016-09-02
+Version: 1.3.0
+Date: 2016-09-08
 Author: Roberto Bertolusso
 Maintainer: Roberto Bertolusso <rbertolusso@rice.edu>
 Description:
@@ -15,5 +15,7 @@ Description:
   'intuEnv', and 'intuBags', are implemented.
 License: GPL (>=2)
 ByteCompile: no
-Suggests: dplyr, knitr, magrittr, nycflights13, rmarkdown
+NeedsCompilation: yes
+Imports: inline
+Suggests: dplyr, knitr, magrittr, nycflights13, rmarkdown, survey
 VignetteBuilder: knitr
