@@ -1,3 +1,9 @@
+2016-09-08  Roberto Bertolusso  <rbertolusso@rice.edu>
+
+        * 1.3.0 (not released to CRAN).
+        
+        * You can now remove all interfaces.
+
 2016-09-02  Roberto Bertolusso  <rbertolusso@rice.edu>
 
         * 1.2.0 (not released to CRAN).
